# Osteoflow

./: .env.local.example  .gitignore  ALIGNMENT.md  CHANGELOG.md  LICENSE  MIGRATION_STATUS.md  README.md  entitlements.mac.plist  next.config.mjs  next.config.ts  notarize.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: build.yml
desktop/: README.md  index.html  package.json
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: db.rs  main.rs  models.rs  profile.rs  state.rs
electron/: cron.ts  license.ts  main.ts  preload.ts  tsconfig.json  types.d.ts  whisper-worker.ts
installer/: Ouvrir Osteoflow.command
scripts/: capture-demo.mjs  capture-exercises.mjs  capture-messages.mjs  generate-keypair.mjs  generate-license.mjs  import-wger-exercises.mjs  match-wger-images.mjs  seed-demo.mjs  seed-messages.mjs
src/app/: layout.tsx  page.tsx
src/components/: InactivityTimer.tsx
src/contexts/: tour-context.tsx
src/data/: changelog.ts
src/hooks/: use-debounced-callback.ts
src/lib/: anamnesis.ts  consultation-annotations.ts  hypotheses.ts  license-session.ts  license.ts  local-api-auth.ts  local-api-token.ts  server-cron.ts  theme.ts
src/styles/: globals.css
src/types/: ai.ts  database.ts  exercise.ts  pain-points.ts  react-pdf-pdfkit.d.ts
supabase/migrations/: 001_initial_schema.sql  002_messages_schema.sql  003_medical_history_statistics.sql  004_google_reviews_and_conversation_deletes.sql  (+2 more)
survey-worker/: package.json  tsconfig.json  wrangler.toml
(+292 files in other folders)
