[package]
name = "osteoflow-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.5", features = ["api-all"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
